Update to reflect changes on the java files